swagger config test
