# cmd/dictionary-service/calendar-endpoints.go
@@ -13,15 +13,22 @@ func MakeCalendarEndpoints(r *mux.Router, service calendar.Service) {
 	// swagger:route GET /api/calendar/{calendarType}/{from}/{to} Calendar
 	//
 	// Loads all calendar items for given type and date range
+	//     Responses:
+	//       default: RestError
+	//       200: loadCalendar
+	//       400: RestError
 	r.Methods("GET").Path("/api/calendar/{type}/{from}/{to}").Handler(http.NewServer(
 		rest.MakeLoadCalendarEndpoint(service),
 		rest.DecodeLoadCalendarRequest,
 		common.EncodeResponse,
 	))
 
-	// swagger:route POST /api/calendar/{calendarType}/{day} saveCalendar
+	// swagger:route POST /api/calendar/{calendarType}/{day} createCalendar
 	//
 	// Create new calendar item
+	//     Responses:
+	//       200:
+	//       400: RestError
 	r.Methods("POST").Path("/api/calendar/{type}/{day}").Handler(http.NewServer(
 		rest.MakeSaveCalendarEndpoint(service),
 		rest.DecodeSaveCalendarRequest,
@@ -31,6 +38,9 @@ func MakeCalendarEndpoints(r *mux.Router, service calendar.Service) {
 	// swagger:route PUT /api/calendar/{calendarType}/{day} updateCalendar
 	//
 	// Update existing calendar item
+	//     Responses:
+	//       200:
+	//       400: RestError
 	r.Methods("PUT").Path("/api/calendar/{type}/{day}").Handler(http.NewServer(
 		rest.MakeUpdateCalendarEndpoint(service),
 		rest.DecodeSaveCalendarRequest,
@@ -40,6 +50,8 @@ func MakeCalendarEndpoints(r *mux.Router, service calendar.Service) {
 	// swagger:route DELETE /api/calendar/{calendarType}/{day} deleteCalendar
 	//
 	// Delete existing calendar item
+	//     Responses:
+	//       200:
 	r.Methods("DELETE").Path("/api/calendar/{type}/{day}").Handler(http.NewServer(
 		rest.MakeDeleteCalendar(service),
 		rest.DecodeDeleteCalendarRequest,
